--- a/.github/workflows/build-kernelsu.yml
+++ b/.github/workflows/build-kernelsu.yml
@@ -29,6 +29,10 @@ jobs:
         sudo rm -rf "$AGENT_TOOLSDIRECTORY"
         sudo rm -rf /usr/local/lib/android
         sudo rm -rf /opt/hostedtoolcache/CodeQL
+        sudo rm -rf /usr/local/graalvm/
+        sudo rm -rf /usr/local/share/powershell
+        sudo rm -rf /usr/local/share/chromium
+        sudo rm -rf /usr/local/lib/node_modules
 
         echo "清理APT缓存..."
         sudo apt-get clean
@@ -69,7 +73,12 @@ jobs:
             echo "GitHub下载失败，尝试加速链接..."
             wget -q --show-progress --timeout=300 \
               https://ghproxy.com/https://github.com/MiCode/Xiaomi_Kernel_OpenSource/archive/refs/heads/camellia-r-oss.zip \
-              -O kernel.zip
+              -O kernel.zip || {
+                echo "再次尝试镜像..."
+                wget -q --show-progress --timeout=300 \
+                  https://gh.api.99988866.xyz/https://github.com/MiCode/Xiaomi_Kernel_OpenSource/archive/refs/heads/camellia-r-oss.zip \
+                  -O kernel.zip
+              }
           }
 
         echo "解压内核源码..."
@@ -88,10 +97,16 @@ jobs:
         if [ -n "${{ github.event.inputs.kernelsu_version }}" ]; then
           wget -q --show-progress \
             https://github.com/tiann/KernelSU/archive/refs/tags/${{ github.event.inputs.kernelsu_version }}.zip \
+            -O kernelsu.zip || \
+          wget -q --show-progress \
+            https://ghproxy.com/https://github.com/tiann/KernelSU/archive/refs/tags/${{ github.event.inputs.kernelsu_version }}.zip \
             -O kernelsu.zip
         else
           wget -q --show-progress \
             https://github.com/tiann/KernelSU/archive/refs/heads/main.zip \
+            -O kernelsu.zip || \
+          wget -q --show-progress \
+            https://ghproxy.com/https://github.com/tiann/KernelSU/archive/refs/heads/main.zip \
             -O kernelsu.zip
         fi
 
@@ -100,6 +115,7 @@ jobs:
         rm kernelsu.zip
 
         echo "KernelSU准备完成"
+        ls -la KernelSU/kernel/
 
     - name: 集成KernelSU到内核
       run: |
@@ -120,14 +136,41 @@ jobs:
         # 修改Makefile
         if ! grep -q "kernelsu" drivers/Makefile; then
           echo 'obj-y += kernelsu/' >> drivers/Makefile
+          echo "已添加KernelSU到Makefile"
         fi
 
         # 修改Kconfig
         if ! grep -q "kernelsu" drivers/Kconfig; then
           echo 'source "drivers/kernelsu/Kconfig"' >> drivers/Kconfig
+          echo "已添加KernelSU到Kconfig"
         fi
 
         echo "KernelSU集成配置完成"
+
+    - name: 修复头文件路径
+      run: |
+        cd $HOME/kernel
+
+        echo "修复MediaTek头文件包含路径..."
+
+        # 方法1：修改源文件使用相对路径
+        if [ -f "drivers/clk/mediatek/clkdbg-mt6833.c" ]; then
+          sed -i 's|#include <clk-mux.h>|#include "./clk-mux.h"|g' drivers/clk/mediatek/clkdbg-mt6833.c
+          echo "已修复clkdbg-mt6833.c"
+        fi
+
+        if [ -f "drivers/cpuidle/cpuidle-mediatek.c" ]; then
+          sed -i 's|#include <dt_idle_states.h>|#include "./dt_idle_states.h"|g' drivers/cpuidle/cpuidle-mediatek.c
+          echo "已修复cpuidle-mediatek.c"
+        fi
+
+        # 方法2：复制头文件到include目录（备用）
+        if [ -f "drivers/clk/mediatek/clk-mux.h" ]; then
+          mkdir -p include/linux/clk/mediatek/
+          cp drivers/clk/mediatek/*.h include/linux/clk/mediatek/ 2>/dev/null || true
+        fi
+
+        echo "头文件路径修复完成"
 
     - name: 配置内核
       run: |
@@ -138,25 +181,55 @@ jobs:
         export CROSS_COMPILE=aarch64-linux-gnu-
 
         # 使用camellia默认配置
+        echo "应用默认配置..."
         make camellia_defconfig
 
-        # 禁用会导致编译失败的选项
+        # 禁用有编译问题的驱动（这些不是必需的）
+        echo "禁用问题驱动..."
+        scripts/config --disable CONFIG_COMMON_CLK_MT6833
+        scripts/config --disable CONFIG_COMMON_CLK_MT6833_AUDIO
+        scripts/config --disable CONFIG_COMMON_CLK_MT6833_CAMSYS
+        scripts/config --disable CONFIG_COMMON_CLK_MT6833_IMGSYS
+        scripts/config --disable CONFIG_COMMON_CLK_MT6833_IPESYS
+        scripts/config --disable CONFIG_COMMON_CLK_MT6833_MDPSYS
+        scripts/config --disable CONFIG_COMMON_CLK_MT6833_MFGCFG
+        scripts/config --disable CONFIG_COMMON_CLK_MT6833_MMSYS
+        scripts/config --disable CONFIG_COMMON_CLK_MT6833_VDECSYS
+        scripts/config --disable CONFIG_COMMON_CLK_MT6833_VENCSYS
+        scripts/config --disable CONFIG_MTK_IDLE_BALANCE_ENHANCEMENT
+        scripts/config --disable CONFIG_MTK_CPUIDLE
+
+        # 禁用栈保护（避免编译器兼容问题）
+        echo "禁用栈保护..."
         scripts/config --disable CONFIG_CC_STACKPROTECTOR_STRONG
         scripts/config --disable CONFIG_CC_STACKPROTECTOR
+        scripts/config --disable CONFIG_STACKPROTECTOR
+        scripts/config --disable CONFIG_STACKPROTECTOR_STRONG
 
         # 启用KernelSU需要的选项
+        echo "启用KernelSU..."
         scripts/config --enable CONFIG_KPROBES
         scripts/config --enable CONFIG_HAVE_KPROBES
         scripts/config --enable CONFIG_KPROBE_EVENTS
+        scripts/config --enable CONFIG_MODULES
+        scripts/config --enable CONFIG_MODULE_UNLOAD
 
         # 添加KernelSU配置
         echo "CONFIG_KSU=y" >> .config
+        echo "CONFIG_KSU_DEBUG=n" >> .config
 
         # 更新配置
         make olddefconfig
 
         echo "内核配置完成，验证关键配置:"
-        grep -E "CONFIG_KSU|CONFIG_KPROBES|STACKPROTECTOR" .config || true
+        echo "================="
+        echo "KernelSU状态:"
+        grep -E "CONFIG_KSU" .config || echo "未找到KSU配置"
+        echo "KPROBES状态:"
+        grep -E "CONFIG_KPROBES" .config || echo "未找到KPROBES配置"
+        echo "问题驱动状态:"
+        grep -E "CONFIG_COMMON_CLK_MT6833|CONFIG_MTK_CPUIDLE" .config || echo "问题驱动已禁用"
+        echo "================="
 
     - name: 编译内核
       run: |
@@ -167,20 +240,25 @@ jobs:
         export CROSS_COMPILE=aarch64-linux-gnu-
         export CROSS_COMPILE_ARM32=arm-linux-gnueabi-
         export KCFLAGS="-w"
+        export CONFIG_CC_STACKPROTECTOR_STRONG=n
 
         echo "开始编译内核 (使用 $(nproc) 线程)..."
         echo "预计需要15-20分钟..."
+        echo "================="
 
-        # 编译内核镜像
-        make -j$(nproc) Image.gz-dtb 2>&1 | tail -n 100
+        # 编译内核镜像（显示更多输出以便调试）
+        make -j$(nproc) Image.gz-dtb 2>&1 | tail -n 200
 
         # 检查编译结果
         if [ -f arch/arm64/boot/Image.gz-dtb ]; then
+          echo "================="
           echo "✅ 内核编译成功!"
           ls -lh arch/arm64/boot/Image.gz-dtb
         else
+          echo "================="
           echo "❌ 内核编译失败"
-          echo "查看最后的错误信息..."
+          echo "尝试查找可能的内核文件..."
+          find arch/arm64/boot/ -name "Image*" -type f
           exit 1
         fi
 
@@ -190,11 +268,14 @@ jobs:
 
         # 复制内核
         cp $HOME/kernel/arch/arm64/boot/Image.gz-dtb $HOME/output/
+        echo "内核文件大小: $(ls -lh $HOME/output/Image.gz-dtb | awk '{print $5}')"
 
         # 下载boot.img处理工具
         cd $HOME/output
         echo "下载boot.img处理工具..."
-        wget -q https://github.com/topjohnwu/Magisk/releases/latest/download/Magisk-26.4.apk
+        wget -q https://github.com/topjohnwu/Magisk/releases/latest/download/Magisk-26.4.apk || \
+        wget -q https://ghproxy.com/https://github.com/topjohnwu/Magisk/releases/latest/download/Magisk-26.4.apk
+
         unzip -q -j Magisk-26.4.apk 'lib/x86_64/libmagiskboot.so'
         mv libmagiskboot.so magiskboot
         chmod +x magiskboot
@@ -203,107 +284,184 @@ jobs:
         # 创建Windows批处理脚本
         cat > make_boot.bat << 'BAT_END'
         @echo off
-        echo KernelSU Boot.img 制作工具 (Windows)
+        chcp 65001 >nul
         echo =====================================
+        echo  KernelSU Boot.img 制作工具 (Windows)
+        echo =====================================
+        echo.
+        echo 注意：这是KernelSU内核，不是Magisk！
         echo.
 
         if not exist boot.img (
-          echo 错误: 请先将原版boot.img放到本目录
+          echo [错误] 请先将原版boot.img放到本目录
+          echo.
+          echo 获取boot.img的方法：
+          echo 1. 使用ADB命令：
+          echo    adb shell su -c "dd if=/dev/block/by-name/boot of=/sdcard/boot.img"
+          echo    adb pull /sdcard/boot.img
+          echo 2. 或从官方ROM包中提取
+          echo.
           pause
           exit /b 1
         )
 
         echo [1/3] 解包boot.img...
         magiskboot.exe unpack boot.img
+        if errorlevel 1 goto error
 
         echo [2/3] 替换为KernelSU内核...
         copy /Y Image.gz-dtb kernel
+        if errorlevel 1 goto error
 
         echo [3/3] 重新打包...
         magiskboot.exe repack boot.img
+        if errorlevel 1 goto error
 
         echo.
-        echo 完成! 生成文件: new-boot.img
+        echo ✅ 成功！生成文件: new-boot.img
         echo.
-        echo 刷入方法:
-        echo   adb reboot bootloader
-        echo   fastboot flash boot new-boot.img
-        echo   fastboot reboot
+        echo 刷入步骤:
+        echo 1. adb reboot bootloader
+        echo 2. fastboot flash boot new-boot.img
+        echo 3. fastboot reboot
         echo.
+        echo 刷入后请安装KernelSU管理器
         pause
+        exit /b 0
+
+        :error
+        echo.
+        echo ❌ 出错了！请检查文件是否完整
+        pause
+        exit /b 1
         BAT_END
 
         # 创建Linux/Mac脚本
         cat > make_boot.sh << 'SH_END'
         #!/bin/bash
-        echo "KernelSU Boot.img 制作工具 (Linux/Mac)"
-        echo "======================================"
+        echo "====================================="
+        echo " KernelSU Boot.img 制作工具 (Linux/Mac)"
+        echo "====================================="
+        echo ""
+        echo "注意：这是KernelSU内核，不是Magisk！"
         echo ""
 
         if [ ! -f boot.img ]; then
-          echo "错误: 请先将原版boot.img放到本目录"
+          echo "[错误] 请先将原版boot.img放到本目录"
+          echo ""
+          echo "获取boot.img的方法："
+          echo "1. 使用ADB命令："
+          echo '   adb shell su -c "dd if=/dev/block/by-name/boot of=/sdcard/boot.img"'
+          echo "   adb pull /sdcard/boot.img"
+          echo "2. 或从官方ROM包中提取"
+          echo ""
           exit 1
         fi
 
         echo "[1/3] 解包boot.img..."
-        ./magiskboot unpack boot.img
+        ./magiskboot unpack boot.img || exit 1
 
         echo "[2/3] 替换为KernelSU内核..."
-        cp Image.gz-dtb kernel
+        cp Image.gz-dtb kernel || exit 1
 
         echo "[3/3] 重新打包..."
-        ./magiskboot repack boot.img
+        ./magiskboot repack boot.img || exit 1
 
         echo ""
-        echo "完成! 生成文件: new-boot.img"
+        echo "✅ 成功！生成文件: new-boot.img"
         echo ""
-        echo "刷入方法:"
-        echo "  adb reboot bootloader"
-        echo "  fastboot flash boot new-boot.img"
-        echo "  fastboot reboot"
+        echo "刷入步骤:"
+        echo "1. adb reboot bootloader"
+        echo "2. fastboot flash boot new-boot.img"
+        echo "3. fastboot reboot"
+        echo ""
+        echo "刷入后请安装KernelSU管理器"
         SH_END
         chmod +x make_boot.sh
 
-        # 创建说明文档
-        cat > 使用说明.txt << 'DOC_END'
-        KernelSU内核 for 红米Note 10 (camellia)
+        # 创建详细说明文档
+        cat > README_CN.txt << 'DOC_END'
+        ========================================
+          KernelSU内核 for 红米Note 10
+                  (camellia)
         ========================================
 
-        【文件说明】
-        - Image.gz-dtb    : KernelSU内核文件
-        - magiskboot      : Boot镜像处理工具（不是Magisk！）
-        - make_boot.sh    : Linux/Mac制作脚本
-        - make_boot.bat   : Windows制作脚本
+        【重要说明】
+        本内核集成了KernelSU，刷入后将替代原有的Magisk/Kitsune Mask
+        magiskboot只是用来打包boot.img的工具，不包含Magisk
+
+        【包含文件】
+        ├── Image.gz-dtb    - KernelSU内核文件
+        ├── magiskboot      - Boot镜像处理工具
+        ├── make_boot.sh    - Linux/Mac制作脚本
+        ├── make_boot.bat   - Windows制作脚本
+        └── README_CN.txt   - 本说明文件
 
         【使用步骤】
 
-        1. 提取手机的原版boot.img:
-           adb shell su -c "dd if=/dev/block/by-name/boot of=/sdcard/boot.img"
-           adb pull /sdcard/boot.img
+        步骤1：备份原版boot.img
+        -------------------------
+        方法A - 使用ADB（需要当前root权限）：
+          adb shell
+          su
+          dd if=/dev/block/by-name/boot of=/sdcard/boot_backup.img
+          exit
+          exit
+          adb pull /sdcard/boot_backup.img
 
-        2. 将boot.img放到本目录
+        方法B - 从官方ROM提取：
+          下载官方线刷包，解压后找到boot.img
 
-        3. 运行制作脚本:
+        步骤2：制作新boot.img
+        -------------------------
+        1. 将boot_backup.img复制到本目录并改名为boot.img
+        2. 运行对应系统的脚本：
            - Windows: 双击 make_boot.bat
-           - Linux/Mac: 运行 ./make_boot.sh
+           - Linux/Mac: 终端运行 ./make_boot.sh
+        3. 成功后会生成new-boot.img
 
-        4. 刷入new-boot.img:
+        步骤3：刷入新内核
+        -------------------------
+        1. 进入Bootloader模式：
            adb reboot bootloader
+
+        2. 刷入内核：
            fastboot flash boot new-boot.img
+
+        3. 重启：
            fastboot reboot
 
-        5. 安装KernelSU管理器:
-           https://github.com/tiann/KernelSU/releases
+        步骤4：安装KernelSU管理器
+        -------------------------
+        下载地址：https://github.com/tiann/KernelSU/releases
+        安装最新版KernelSU.apk
 
         【注意事项】
-        ⚠️ 这是KernelSU内核，会替代Magisk/Kitsune Mask
-        ⚠️ 刷入前必须备份原版boot.img
-        ⚠️ 需要解锁Bootloader
-        ⚠️ 首次刷入建议清除数据
+        1. 刷入前务必备份原版boot.img！
+        2. 需要已解锁Bootloader
+        3. 首次刷入可能需要清除数据
+        4. 原Magisk模块需要转换为KernelSU模块
+        5. 如果刷入后无法开机，进入fastboot刷回原版：
+           fastboot flash boot boot_backup.img
 
-        【救砖方法】
-        如果无法开机，进入fastboot模式刷回原版:
-        fastboot flash boot boot_backup.img
+        【验证是否成功】
+        1. 安装KernelSU管理器
+        2. 打开应该显示"已安装"
+        3. 版本号显示内核版本
+
+        【常见问题】
+        Q: 刷入后Magisk消失了？
+        A: 正常，KernelSU替代了Magisk
+
+        Q: 原来的Magisk模块还能用吗？
+        A: 需要转换为KernelSU模块格式
+
+        Q: 如何卸载KernelSU？
+        A: 刷回原版boot.img即可
+
+        ========================================
+        编译时间: $(date '+%Y-%m-%d %H:%M:%S')
+        ========================================
         DOC_END
 
     - name: 上传编译结果
@@ -321,19 +479,21 @@ jobs:
         echo "- **型号**: 红米Note 10 (camellia)" >> $GITHUB_STEP_SUMMARY
         echo "- **处理器**: MediaTek Dimensity 700" >> $GITHUB_STEP_SUMMARY
         echo "- **Android**: 11 (R)" >> $GITHUB_STEP_SUMMARY
+        echo "- **分区类型**: VAB (Virtual A/B)" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
         echo "## 📦 编译信息" >> $GITHUB_STEP_SUMMARY
         echo "- **内核大小**: $(ls -lh $HOME/output/Image.gz-dtb | awk '{print $5}')" >> $GITHUB_STEP_SUMMARY
         echo "- **编译时间**: $(date '+%Y-%m-%d %H:%M:%S')" >> $GITHUB_STEP_SUMMARY
-        echo "- **构建编号**: ${{ github.run_number }}" >> $GITHUB_STEP_SUMMARY
+        echo "- **构建编号**: #${{ github.run_number }}" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
-        echo "## 📥 下载说明" >> $GITHUB_STEP_SUMMARY
-        echo "1. 点击上方 **KernelSU-Camellia-${{ github.run_number }}** 下载" >> $GITHUB_STEP_SUMMARY
-        echo "2. 解压后查看《使用说明.txt》" >> $GITHUB_STEP_SUMMARY
+        echo "## 🚀 使用方法" >> $GITHUB_STEP_SUMMARY
+        echo "1. 下载 **KernelSU-Camellia-${{ github.run_number }}.zip**" >> $GITHUB_STEP_SUMMARY
+        echo "2. 解压并查看 **README_CN.txt**" >> $GITHUB_STEP_SUMMARY
         echo "3. 使用提供的脚本制作boot.img" >> $GITHUB_STEP_SUMMARY
+        echo "4. 刷入并安装KernelSU管理器" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
         echo "## ⚠️ 重要提醒" >> $GITHUB_STEP_SUMMARY
-        echo "- 这是KernelSU内核，不是Magisk" >> $GITHUB_STEP_SUMMARY
-        echo "- 会替代原有的Kitsune Mask" >> $GITHUB_STEP_SUMMARY
-        echo "- 刷入前务必备份原版boot.img" >> $GITHUB_STEP_SUMMARY
-        echo "- 需要安装KernelSU管理器APP" >> $GITHUB_STEP_SUMMARY
+        echo "- **这是KernelSU内核，会替代Magisk/Kitsune Mask**" >> $GITHUB_STEP_SUMMARY
+        echo "- **刷入前务必备份原版boot.img**" >> $GITHUB_STEP_SUMMARY
+        echo "- **需要解锁Bootloader**" >> $GITHUB_STEP_SUMMARY
+        echo "- **下载KernelSU管理器**: [GitHub Releases](https://github.com/tiann/KernelSU/releases)" >> $GITHUB_STEP_SUMMARY
